improve js,add comment
improve js,add comment

--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -85,7 +85,7 @@
     </header>
 
     <div class="main-content">
-
+        <!-- banner-start -->
         <div class="banner margin-bottom-md">
             <div class="container">
                 <div class="banner-text">
@@ -97,7 +97,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- banner-end -->
+        <!-- intro-start -->
         <div class="intro container">
             <div class="intro-title">
                 <h2>Welcome to our healthy farm!</h2>
@@ -146,7 +147,8 @@
             </div>
 
         </div>
-
+        <!-- intro-end -->
+        <!-- products-block-start -->
         <div class="products-block container margin-bottom-md">
             <div class="products-title">
                 <h3>Our Products</h3>
@@ -372,7 +374,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- products-block-end -->
+        <!-- shopNow-block-start -->
         <div class="shopNow-block margin-bottom-lg">
             <div class="container">
                 <div class="shopNow-block-text">
@@ -384,7 +387,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- shopNow-block-end -->
+        <!-- vegetable-block-start -->
         <div class="vegetable-block margin-bottom-lg">
             <div class="vegetable-pic">
                 <img src="img/asset29.png">
@@ -410,7 +414,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- vegetable-block-end -->
+        <!-- blog-block-start -->
         <div class="blog-block margin-bottom-lg">
             <div class="container">
                 <div class="title margin-bottom-sm">
@@ -466,7 +471,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- blog-block-end -->
+        <!-- cold-cereals-start -->
         <div class="cold-cereals container margin-bottom-lg">
             <div class="cold-cereals-col">
                 <h5>Cold-cereal</h5>
@@ -616,7 +622,8 @@
                 </ul>
             </div>
         </div>
-
+        <!-- cold-cereals-end -->
+        <!-- swiper-block-start -->
         <div class="swiper-block margin-bottom-md">
             <div class="container">
                 <h3>Our Clients Testimonials</h3>
@@ -649,16 +656,15 @@
                             <h4 class="client-name">Alice Show</h4>
                             <p class="client-type">Customer</p>
                         </div>
-
                     </div>
 
-                    <!-- Add Arrows -->
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                 </div>
             </div>
         </div>
-
+        <!-- swiper-block-end -->
+        <!-- subscribe-block-start -->
         <div class="subscribe-block container margin-bottom-lg">
             <h3>Subscribe Newsletter</h3>
             <div class="subscribe-panel">
@@ -667,7 +673,7 @@
                 <div class="btn btn-md btn-hover1"><a href="#!">SUBSCIBE</a></div>
             </div>
         </div>
-
+        <!-- subscribe-block-end -->
     </div>
 
     <footer>
@@ -714,6 +720,7 @@
             </div>
         </div>
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="script.js"></script>
