--- a/Toyota/index.html
+++ b/Toyota/index.html
@@ -70,15 +70,10 @@
                 <div class="text-block">
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>低重心設計</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>車體剛性強化</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>高性能懸吊</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
+                    <span>主動安全</span>
+                    <p>以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
+                    <span>被動安全</span>
+                    <p>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
 
                 </div>
             </div>
@@ -88,8 +83,7 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2><span>03</span>乘坐舒適</h2>
-                    <h4><span>人人滿意的駕駛體驗</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-                        perferendis cum quasi id delectus neque.</h4>
+                    <h4><span>令人放鬆舒適的車室空間</span>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。</h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-3-video-button-bg.png?705545c7">
@@ -98,15 +92,12 @@
                 <div class="text-block">
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>低重心設計</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>車體剛性強化</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>高性能懸吊</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
+                    <span>駕駛位置最佳化</span>
+                    <p>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</p>
+                    <span>駕馭視野佳</span>
+                    <p>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
+                    <span>更寧靜的車室</span>
+                    <p>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
 
                 </div>
             </div>
@@ -115,8 +106,7 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2>以人為本<span>04</span></h2>
-                    <h4><span>人人滿意的駕駛體驗</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-                        perferendis cum quasi id delectus neque.</h4>
+                    <h4><span>使用者導向的貼心設計</span>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李箱空間最適化，均細心考慮，更加貼切使用者真正所需與習慣，並給於即時回應</h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-4-video-button-bg.png?24515544">
@@ -125,15 +115,11 @@
                 <div class="text-block">
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>低重心設計</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>車體剛性強化</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>高性能懸吊</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
+                    <span>優異油耗表現</span>
+                    <p>以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
+                    <span>行李箱空間最適化</span>
+                    <p>以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</p>
+                   
                 </div>
             </div>
 
@@ -142,8 +128,7 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2><span>05</span>引以為傲</h2>
-                    <h4><span>人人滿意的駕駛體驗</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-                        perferendis cum quasi id delectus neque.</h4>
+                    <h4><span>極具吸引力的精心設計</span>TNGA車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-5-video-button-bg.png?ad476b92">
@@ -152,15 +137,11 @@
                 <div class="text-block">
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>低重心設計</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>車體剛性強化</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
-                    <span>高性能懸吊</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, delectus?
-                    </p>
+                    <span>設計概念</span>
+                    <p>TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</p>
+                    <span>環保概念</span>
+                    <p>為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
+                    
                 </div>
             </div>
 
