--- a/Toyota/index.html
+++ b/Toyota/index.html
@@ -71,9 +71,9 @@
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
                     <span>主動安全</span>
-                    <p>以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
+                    <p>● 以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
                     <span>被動安全</span>
-                    <p>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
+                    <p>● 堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
 
                 </div>
             </div>
@@ -93,11 +93,11 @@
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
                     <span>駕駛位置最佳化</span>
-                    <p>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</p>
+                    <p>● 針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</p>
                     <span>駕馭視野佳</span>
-                    <p>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
+                    <p>● 考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
                     <span>更寧靜的車室</span>
-                    <p>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
+                    <p>● 採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
 
                 </div>
             </div>
@@ -116,9 +116,9 @@
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
                     <span>優異油耗表現</span>
-                    <p>以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
+                    <p>● 以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
                     <span>行李箱空間最適化</span>
-                    <p>以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</p>
+                    <p>● 以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</p>
                    
                 </div>
             </div>
@@ -138,9 +138,9 @@
                     <h3>因為我們做了這些革新 —————————————————</h3>
 
                     <span>設計概念</span>
-                    <p>TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</p>
+                    <p>● TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</p>
                     <span>環保概念</span>
-                    <p>為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
+                    <p>● 為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
                     
                 </div>
             </div>
