--- a/Toyota/index.html
+++ b/Toyota/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://www.toyota.com.tw/favicon.ico?2016NOV">
     <title>TNGA 新世代造車工藝</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="style.css?07071128">
+    <link rel="stylesheet" href="style.css?07071159">
 </head>
 
 <body>
@@ -42,18 +42,19 @@
                     <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
-                    <h3>因為我們做了這些革新 —————————————————</h3>
+                    <ul>
+                        <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>低重心設計</span>
-                    <p>．透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
-                    </p>
-                    <span>車體剛性強化</span>
-                    <p>．車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加<br>焊點數量，提升車身抗扭剛性，強化駕馭穩定性與安全性。
-                    </p>
-                    <span>高性能懸吊</span>
-                    <p>．TNGA 透過懸吊的高乘載強度及完美懸吊幾何設定保持輪胎貼地性，同時兼顧轉向靈<br>敏度與清晰路感回饋，提升駕馭體驗。
-                    </p>
-
+                        <span>低重心設計</span>
+                        <li>透過低重心設計，不僅呈現更低伏的外觀，更能減少車身側傾，保持高速行駛穩定性。
+                        </li>
+                        <span>車體剛性強化</span>
+                        <li>車身結構採用超高強度鋼材，提高車輛穩定性，同時藉由雷射強化焊接技術，大幅增加<br>焊點數量，提升車身抗扭剛性，強化駕馭穩定性與安全性。
+                        </li>
+                        <span>高性能懸吊</span>
+                        <li>TNGA 透過懸吊的高乘載強度及完美懸吊幾何設定保持輪胎貼地性，同時兼顧轉向靈<br>敏度與清晰路感回饋，提升駕馭體驗。
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -68,13 +69,14 @@
                     <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
-                    <h3>因為我們做了這些革新 —————————————————</h3>
+                    <ul>
+                        <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>主動安全</span>
-                    <p>．以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</p>
-                    <span>被動安全</span>
-                    <p>．堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</p>
-
+                        <span>主動安全</span>
+                        <li>以先進的TSS系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。</li>
+                        <span>被動安全</span>
+                        <li>堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。</li>
+                    </ul>
                 </div>
             </div>
 
@@ -83,22 +85,24 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2><span>03</span>乘坐舒適</h2>
-                    <h4><span>令人放鬆舒適的車室空間</span>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。</h4>
+                    <h4><span>令人放鬆舒適的車室空間</span>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。
+                    </h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-3-video-button-bg.png?705545c7">
                     <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
-                    <h3>因為我們做了這些革新 —————————————————</h3>
+                    <ul>
+                        <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>駕駛位置最佳化</span>
-                    <p>．針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</p>
-                    <span>駕馭視野佳</span>
-                    <p>．考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野更開闊，同步提升駕馭安全。</p>
-                    <span>更寧靜的車室</span>
-                    <p>．採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。</p>
-
+                        <span>駕駛位置最佳化</span>
+                        <li>針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適地操控方向盤。</li>
+                        <span>駕馭視野佳</span>
+                        <li>考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區最小化，使駕駛視野<br>更開闊，同步提升駕馭安全。</li>
+                        <span>更寧靜的車室</span>
+                        <li>採用最新三層結構的隔音材料，與引擎、變速箱的零件改革，將座艙的震動抑制在最小<br>限度，提供乘客舒適安靜的感受。</li>
+                    </ul>
                 </div>
             </div>
 
@@ -106,20 +110,22 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2>以人為本<span>04</span></h2>
-                    <h4><span>使用者導向的貼心設計</span>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李箱空間最適化，均細心考慮，更加貼切使用者真正所需與習慣，並給於即時回應</h4>
+                    <h4><span>使用者導向的貼心設計</span>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李箱空間最適化，均細心考慮，更加貼切使用者真正所需與習慣，並給於即時回應
+                    </h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-4-video-button-bg.png?24515544">
                     <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
-                    <h3>因為我們做了這些革新 —————————————————</h3>
+                    <ul>
+                        <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>優異油耗表現</span>
-                    <p>．以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破燃油效率新境界。</p>
-                    <span>行李箱空間最適化</span>
-                    <p>．以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</p>
-                   
+                        <span>優異油耗表現</span>
+                        <li>以AURIS為例，更強勁的高效引擎將熱效率提升至40%，達到世界級水準，屢屢突破<br>燃油效率新境界。</li>
+                        <span>行李箱空間最適化</span>
+                        <li>以PRIUS為例，透過將電池位置移到後座下方，讓行李箱擁有更大的空間。</li>
+                    </ul>
                 </div>
             </div>
 
@@ -135,13 +141,14 @@
                     <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
-                    <h3>因為我們做了這些革新 —————————————————</h3>
+                    <ul>
+                        <h3>因為我們做了這些革新 —————————————————</h3>
 
-                    <span>設計概念</span>
-                    <p>．TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</p>
-                    <span>環保概念</span>
-                    <p>．為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。</p>
-                    
+                        <span>設計概念</span>
+                        <li>TNGA低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。</li>
+                        <span>環保概念</span>
+                        <li>為了對環境保護盡一份心力，，我們全面提升傳統引擎、變速箱與油電複合動力的動力<br>效能。</li>
+                    </ul>
                 </div>
             </div>
 
