--- a/Toyota/index.html
+++ b/Toyota/index.html
@@ -34,8 +34,7 @@
                 <div class="color-block"></div>
                 <div class="info">
                     <h2><span>03</span>操控樂趣</h2>
-                    <h4><span>人人滿意的駕駛體驗</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam
-                        perferendis cum quasi id delectus neque.</h4>
+                    <h4><span>人人滿意的駕駛體驗</span>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。</h4>
                 </div>
                 <div class="video-btn">
                     <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-1-video-button-bg.png?9e068d9b">
