--- a/Toyota/index.html
+++ b/Toyota/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="https://www.toyota.com.tw/favicon.ico?2016NOV">
     <title>TNGA 新世代造車工藝</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="style.css?07071159">
+    <link rel="stylesheet" href="style.css?07072121">
+
 </head>
 
 <body>
@@ -30,15 +31,12 @@
             </div>
 
 
-            <div class="advantage advantage-right">
-                <div class="color-block"></div>
+            <div class="advantage">
+                <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-1-video-button-bg.png?9e068d9b">
+                <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 <div class="info">
-                    <h2><span>03</span>操控樂趣</h2>
+                    <h2><span>01</span>操控樂趣</h2>
                     <h4><span>人人滿意的駕駛體驗</span>透過最佳重量分配，實現平順起步、直線穩定加速，過彎同時保持車身平穩，帶給駕駛更靈敏的道路反饋，享受隨心馳騁的行駛快感。</h4>
-                </div>
-                <div class="video-btn">
-                    <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-1-video-button-bg.png?9e068d9b">
-                    <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
                     <ul>
@@ -57,15 +55,12 @@
                 </div>
             </div>
 
-            <div class="advantage advantage-left">
-                <div class="color-block"></div>
+            <div class="advantage reverse">
+                <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-2-video-button-bg.png?af18d668">
+                <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 <div class="info">
                     <h2>安全守護<span>02</span></h2>
                     <h4><span>行車更安心的高剛性車體</span>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全科技讓你輕鬆自如享受旅程、毫無後顧之憂</h4>
-                </div>
-                <div class="video-btn">
-                    <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-2-video-button-bg.png?af18d668">
-                    <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
                     <ul>
@@ -80,16 +75,13 @@
             </div>
 
 
-            <div class="advantage advantage-right">
-                <div class="color-block"></div>
+            <div class="advantage">
+                <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-3-video-button-bg.png?705545c7">
+                <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 <div class="info">
                     <h2><span>03</span>乘坐舒適</h2>
                     <h4><span>令人放鬆舒適的車室空間</span>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。
                     </h4>
-                </div>
-                <div class="video-btn">
-                    <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-3-video-button-bg.png?705545c7">
-                    <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
                     <ul>
@@ -105,16 +97,13 @@
                 </div>
             </div>
 
-            <div class="advantage advantage-left">
-                <div class="color-block"></div>
+            <div class="advantage reverse">
+                <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-4-video-button-bg.png?24515544">
+                <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 <div class="info">
                     <h2>以人為本<span>04</span></h2>
                     <h4><span>使用者導向的貼心設計</span>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李箱空間最適化，均細心考慮，更加貼切使用者真正所需與習慣，並給於即時回應
                     </h4>
-                </div>
-                <div class="video-btn">
-                    <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-4-video-button-bg.png?24515544">
-                    <span class="video-btn-icon video-btn-icon-left"><i class="fa fa-play"></i></span>
                 </div>
                 <div class="text-block">
                     <ul>
@@ -129,16 +118,14 @@
             </div>
 
 
-            <div class="advantage advantage-right">
-                <div class="color-block"></div>
+            <div class="advantage">
+                <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-5-video-button-bg.png?ad476b92">
+                <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
                 <div class="info">
                     <h2><span>05</span>引以為傲</h2>
                     <h4><span>極具吸引力的精心設計</span>TNGA車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</h4>
                 </div>
-                <div class="video-btn">
-                    <img src="https://www.toyota.com.tw/asset/img/tech_tnga/advantage-5-video-button-bg.png?ad476b92">
-                    <span class="video-btn-icon video-btn-icon-right"><i class="fa fa-play"></i></span>
-                </div>
+
                 <div class="text-block">
                     <ul>
                         <h3>因為我們做了這些革新 —————————————————</h3>
