--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <!-- top-panel-end -->
-        
+
         <!-- header-panel-start -->
         <div class="header-panel">
             <div class="header-container-wrap container">
@@ -70,13 +70,103 @@
                     <a href="#!"><img src="img/asset0.png" alt=""></a>
                 </div>
                 <div class="header-navbar">
-                    <ul>
-                        <li><a href="#!">HOME</a></li>
-                        <li><a href="#!">ABOUT</a></li>
-                        <li><a href="#!">FEATURES<span class="lnr lnr-chevron-down"></span></a></li>
-                        <li><a href="#!">BLOG<span class="lnr lnr-chevron-down"></span></a></li>
-                        <li><a href="#!">SHOP<span class="lnr lnr-chevron-down"></span></a></li>
-                        <li><a href="#!">CONTACTS</a></li>
+                    <ul class="ul-first-layer">
+                        <li class="first-layer"><a href="#!">HOME</a></li>
+                        <li class="first-layer"><a href="#!">ABOUT</a></li>
+                        <li class="first-layer">
+                            <a href="#!">FEATURES<span class="lnr lnr-chevron-down"></span></a>
+                            <div class="sub-container sub-container1">
+                                <div class="type">
+                                    <h5>Headers</h5>
+                                    <ul>
+                                        <li><a href="#!">Header Style 1</a></li>
+                                        <li><a href="#!">Header Style 2</a></li>
+                                        <li><a href="#!">Header Style 3</a></li>
+                                        <li><a href="#!">Header Style 4</a></li>
+                                        <li><a href="#!">Header Style 5</a></li>
+                                        <li><a href="#!">Header Style 6</a></li>
+                                        <li><a href="#!">Header Style 7</a></li>
+                                    </ul>
+                                </div>
+                                <div class="type">
+                                    <h5>Footers</h5>
+                                    <ul>
+                                        <li><a href="#!">Footer Style 1</a></li>
+                                        <li><a href="#!">Footer Style 2</a></li>
+                                        <li><a href="#!">Footer Style 3</a></li>
+                                    </ul>
+                                </div>
+                                <div class="type">
+                                    <h5>Pages</h5>
+                                    <ul>
+                                        <li><a href="#!">Maintenance</a></li>
+                                        <li><a href="#!">Search Results</a></li>
+                                        <li><a href="#!">Typography</a></li>
+                                        <li><a href="#!">FAQ</a></li>
+                                        <li><a href="#!">Page Not Found</a></li>
+                                        <li><a href="#!">Documentation</a></li>
+                                    </ul>
+                                </div>
+                                <div class="type">
+                                    <h5>Pages</h5>
+                                    <ul>
+                                        <li><a href="#!">About</a></li>
+                                        <li><a href="#!">Contacts</a></li>
+                                        <li><a href="#!">Our Team</a></li>
+                                        <li><a href="#!">Team Member</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="first-layer">
+                            <a href="#!">BLOG<span class="lnr lnr-chevron-down"></span></a>
+                            <div class="sub-container sub-container1">
+                                <div class="type">
+                                    <h5>Blog Layouts</h5>
+                                    <ul>
+                                        <li><a href="#!">Classic</a></li>
+                                        <li><a href="#!">Modern Listing</a></li>
+                                        <li><a href="#!">Grid</a></li>
+                                        <li><a href="#!">Masonry</a></li>
+                                        <li><a href="#!">Justify</a></li>
+                                    </ul>
+                                </div>
+                                <div class="type">
+                                    <h5>Sidebar</h5>
+                                    <ul>
+                                        <li><a href="#!">Left Sidebar</a></li>
+                                        <li><a href="#!">Right Sidebar</a></li>
+                                        <li><a href="#!">No Sidebar</a></li>
+                                    </ul>
+                                </div>
+                                <div class="type">
+                                    <h5>Post Formats</h5>
+                                    <ul>
+                                        <li><a href="#!">Aside Format</a></li>
+                                        <li><a href="#!">Image Format</a></li>
+                                        <li><a href="#!">Gallery Format</a></li>
+                                        <li><a href="#!">Audio Format</a></li>
+                                        <li><a href="#!">Quote Format</a></li>
+                                        <li><a href="#!">Link Format</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="first-layer">
+                            <a href="#!">SHOP<span class="lnr lnr-chevron-down"></span></a>
+                            <div class="sub-container sub-container2">
+                                <ul>
+                                    <li><a href="#!">Product Listing</a></li>
+                                    <li><a href="#!">Product Grid</a></li>
+                                    <li><a href="#!">Single Product</a></li>
+                                    <li><a href="#!">Checkout</a></li>
+                                    <li><a href="#!">Compare</a></li>
+                                    <li><a href="#!">My Account</a></li>
+                                    <li><a href="#!">Wishlist</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="first-layer"><a href="#!">CONTACTS</a></li>
                     </ul>
                 </div>
             </div>
