--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="container">
-        <ul class="list-group">
+        <ul class="py-2 list-group">
             <li class="list-group-item">
                 <a href="curriculum/index.html" target="_blank" class="text-primary h4">2020/06/24 國小課表Table手刻</a>
             </li>
@@ -48,15 +48,21 @@
                 <a href="Naturio/index.html" target="_blank" class="text-primary h4">2020/07/03 Naturio網站切版(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="Toyota/index.html" target="_blank" class="text-primary h4">2020/07/06 TOYOTA切版_position練習(無RWD)</a>
+                <a href="Toyota/index.html" target="_blank" class="text-primary h4">2020/07/06
+                    TOYOTA切版_Position練習(無RWD)</a>
             </li>
         </ul>
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%">學習進度 33%</div>
+          </div>
     </div>
 
     <div class="text-center py-2 text-secondary">
         Copyright &copy; 2020 Tim Chen All rights reserved.
         <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github text-secondary"></i></a>
     </div>
+
 </body>
 
 </html>
