--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <a href="Toyota/index.html" target="_blank" class="text-primary h4">2020/07/06
                     TOYOTA切版_Position練習(無RWD)</a>
             </li>
+            <li class="list-group-item">
+                <a href="BuildSchool(remake)/index.html" target="_blank" class="text-primary h4">2020/07/09
+                    BuildSchool官網remake(有RWD)</a>
+            </li>
         </ul>
 
         <div class="progress">
