--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </ul>
 
         <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%">學習進度 33%</div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100" style="width: 1%">學習進度：1%?</div>
           </div>
     </div>
 
