--- a/BuildSchool-remake/index.html
+++ b/BuildSchool-remake/index.html
@@ -14,10 +14,11 @@
 </head>
 
 <body>
+    <a href="#" id="toTop"><img src="img/fbmessager.png" alt=""></a>
 
     <div class="swiper-block">
         <input type="checkbox" name="" id="menu-control">
-
+        <a href="#" id="toChat">●●●</a>
 
         <div class="swiper-container">
             <div class="swiper-wrapper">
