--- a/BuildSchool-remake/index.html
+++ b/BuildSchool-remake/index.html
@@ -99,7 +99,7 @@
                     <div class="row">
                         <div class="col-12 col-xl-6 title">
                             <div class="pic">
-                                <img src="img/Image001.png">
+                                <img src="img/image001.png">
                             </div>
                             <h2>Build School<br>
                                 /*我們的理念*/</h2>
