--- a/BuildSchool-remake/index.html
+++ b/BuildSchool-remake/index.html
@@ -23,31 +23,58 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="img/title1.png">
+                    <div class="slide-bg bg1">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title2.png">
+                    <div class="slide-bg bg2">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title3.png">
+                    <div class="slide-bg bg3">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title4.png">
+                    <div class="slide-bg bg4">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title5.png">
+                    <div class="slide-bg bg5">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title6.png">
+                    <div class="slide-bg bg6">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title7.png">
+                    <div class="slide-bg bg7">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title8.png">
+                    <div class="slide-bg bg8">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <img src="img/title9.png">
+                    <div class="slide-bg bg9">
+                        <div class="black-mask"></div>
+                        <div class="textarea"></div>
+                    </div>
                 </div>
             </div>
             <!-- Add Arrows -->
