--- a/BuildSchool-remake/index.html
+++ b/BuildSchool-remake/index.html
@@ -8,13 +8,15 @@
         href="https://static.wixstatic.com/media/5a71f2_c1a2fd8298274f7badfbe7e336594b24%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/5a71f2_c1a2fd8298274f7badfbe7e336594b24%7Emv2.png">
     <title>Build School - 軟體人才培訓 軟體工程師培訓 程式教育訓練 | 打造更有競爭力的軟體工程師職涯</title>
     <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="style.css?07111301">
+    <link rel="stylesheet" href="style.css?07111448">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 </head>
 
 <body>
-    <a href="#" id="toChat">●●●</a>
-    <a href="#" id="toTop"><img src="img/fbmessager.png" alt=""></a>
+    <a href="#" id="ToChat">●●●</a>
+    <a href="#" id="FBMessager"><img src="img/fbmessager.png" alt=""></a>
+    <a href="#" id="ScrolltoTop"><img src="img/asset32.png" alt=""></a>
+
 
 
     <div class="swiper-block">
@@ -25,55 +27,140 @@
                 <div class="swiper-slide">
                     <div class="slide-bg bg1">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h2>BUILD SCHOOL</h2>
+                                    <p>Build School 是軟體開發教育的先鋒，為學生打造更有競爭力的職涯</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg2">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h4>想搭上火箭?<br>
+                                        門票是給想成為軟體工程師的你</h4>
+                                    <p>BUILD SCHOOL - DEVELOPER CAREER BUILDER</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg3">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h4>這裏沒有考試<br>
+                                        只有滿滿的程式碼</h4>
+                                    <p>NO TEST BUT YOUR CODES</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg4">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h4>前往峰頂的路上<br>
+                                        有人帶!</h4>
+                                    <p>START CODING AND GET COACHED<br>FROM MENTORS</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg5">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h4>動手做出東西<br>
+                                        才能解決問題</h4>
+                                    <p>BUILD SOMETHING AND SOLVE THE PROBLEM,<br> THAT'S MY STYLE</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg6">
-                        <div class="black-mask"></div>
                         <div class="textarea"></div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg7">
-                        <div class="black-mask"></div>
                         <div class="textarea"></div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg8">
-                        <div class="black-mask"></div>
                         <div class="textarea"></div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slide-bg bg9">
                         <div class="black-mask"></div>
-                        <div class="textarea"></div>
+                        <div class="textarea">
+                            <div class="container">
+                                <div class="title">
+                                    <h2>BUILD SCHOOL</h2>
+                                    <p>Build School is a pioneer of software developer<br>education and career builder for college students</p>
+                                </div>
+                                <div class="btn-group">
+                                    <ul>
+                                        <li><a href="#">台北班簡介及報名(2020/10月後開課)</a></li>
+                                        <li><a href="#">新竹班簡介(2020/12月後開課)</a></li>
+                                        <li><a href="#">即刻報名 (中華大學學生)</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -397,7 +484,13 @@
                 <div class="col-12 col-xl-6 text-area2">
                     <p><a href="#!">隱私權宣告</a>© 2020 by Build School</p>
                 </div>
+
+                <a href="#" class="footer-toTop" id="Footer-toTop">
+                    <img src="img/asset32.png" alt="" width="100%">
+                </a>
+
             </div>
+
         </div>
     </footer>
 
@@ -421,6 +514,25 @@
                 prevEl: '.swiper-button-prev',
             },
         });
+
+
+        $(function () {
+
+            init();
+            $(window).scroll(() => {
+                if ($(this).scrollTop() > 600) {
+                    $('#ScrolltoTop').css('opacity', '1');
+                } else {
+                    $('#ScrolltoTop').css('opacity', '0');
+                }
+            });
+        })
+
+        function init() {
+            $('#ScrolltoTop,#Footer-toTop').click(() => {
+                $('html,body').animate({ scrollTop: 0 }, 500);
+            });
+        }
     </script>
 </body>
 
