--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
             width: 150px;
             height: 150px;
         }
-
-        .avatarbox img {
-            border-radius: 50%;
-            width: 100%;
-        }
     </style>
 
 </head>
@@ -30,42 +25,47 @@
     <div class="jumbotron">
         <div class="container">
             <div class="avatarbox">
-                <img src="avatar.jpg" alt="">
+                <img class="w-100 rounded-circle" src="avatar.jpg" alt="">
             </div>
             <h4 class="text-info">Tim Chen</h4>
             <h1 class="text-info">Build School 作業列表</h1>
         </div>
     </div>
     <div class="container">
-        <ul class="py-2 list-group">
+        <ul class="list-group py-2">
             <li class="list-group-item">
-                <a href="curriculum/index.html" target="_blank" class="text-primary h4">2020/06/24 國小課表Table手刻</a>
+                <a href="curriculum/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/06/24</span>國小課表Table手刻練習</a>
             </li>
             <li class="list-group-item">
-                <a href="Anilove/index.html" target="_blank" class="text-primary h4">2020/06/29 Anilove網站切版(無RWD)</a>
+                <a href="Anilove/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/06/29</span>Anilove網站切版(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="Naturio/index.html" target="_blank" class="text-primary h4">2020/07/03 Naturio網站切版(無RWD)</a>
+                <a href="Naturio/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/03</span>Naturio網站切版(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="Toyota/index.html" target="_blank" class="text-primary h4">2020/07/06
-                    TOYOTA切版_Position練習(無RWD)</a>
+                <a href="Toyota/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4">2020/07/09
-                    BuildSchool官網remake(有RWD)</a>
+                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網remake(有RWD)</a>
             </li>
         </ul>
 
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%">學習進度：?</div>
-          </div>
     </div>
 
     <div class="text-center py-2 text-secondary">
         Copyright &copy; 2020 Tim Chen All rights reserved.
         <a href="https://github.com/timchen0409" target="_blank"><i class="fab fa-github text-secondary"></i></a>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 </body>
 
