--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li class="list-group-item">
                 <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網remake(有RWD)</a>
             </li>
+            <li class="list-group-item">
+                <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
+            </li>
         </ul>
 
     </div>
