--- a/TAKEN/index.html
+++ b/TAKEN/index.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <a href="#" id="ScrolltoTop"><img src="img/arrow_top.png" alt=""></a>
+
+
+
     <div id="header" class="fixed-top w-100 py-lg-2 px-lg-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent flex-row-reverse flex-lg-row">
             <a class="navbar-brand d-block m-auto" href="#"><img src="img/taken_top_logo.png" alt=""></a>
@@ -183,14 +187,17 @@
                         <div class="pic">
                             <a href="#"><img src="img/main_reel.jpg" alt="" class="mw-100"></a>
                         </div>
-                        <h2>TAKE IT TAKEN</h2>
-                        <p class="text-dark">TAKEN is a Manufacture specialized in tuning fishing reels.</p>
-                        <p class="text-dark">
-                            We deal in merchandise of Korean high-precision bearings and alumite treatment parts, and
-                            also
-                            manufacture various metalworking products. Based on our abundant experience of reel
-                            maintenance,
-                            we are developing custom reel parts that raise reel performance, and excite anglers.
+                        <h4>TAKE IT TAKEN</h4>
+                        <p class="text-dark text-center m-0"><small>TAKEN is a Manufacture specialized in tuning fishing
+                                reels.</small></p>
+                        <p class="text-dark text-center"><small>
+                                We deal in merchandise of Korean high-precision bearings and alumite treatment parts,
+                                and
+                                also
+                                manufacture various metalworking products. Based on our abundant experience of reel
+                                maintenance,
+                                we are developing custom reel parts that raise reel performance, and excite
+                                anglers.</small>
                         </p>
                     </div>
                 </div>
@@ -198,8 +205,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="main_video">
-                        <iframe width="100%" src="https://www.youtube.com/embed/wlJYgDgI3PY"
-                            frameborder="0" allowfullscreen=""></iframe>
+                        <iframe width="100%" src="https://www.youtube.com/embed/wlJYgDgI3PY" frameborder="0"
+                            allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
@@ -1150,11 +1157,11 @@
                         <p class="text-white font-weight-bold mb-2">TAKEN</p>
                         <p>COMPANY : TAKEN (타켄)</p>
                         <p>CEO : 이서진</p>
-                        <p>E-MAIL : <a href="#" class="text-light">turbotek01@gmail.com</a></p>
+                        <p>E-MAIL : <a href="#"">turbotek01@gmail.com</a></p>
                         <p>ADDRESS : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동)</p>
                         <p>14 우림라이온스밸리 2차 A동 910호</p>
                         <p>BUSINESS LICENSE : 1054514474</p>
-                        <p>ECOMMERCE LICENSE : 2017-성남중원-0434 <a href="#" class="text-light">[사업자정보확인]</a></p>
+                        <p>ECOMMERCE LICENSE : 2017-성남중원-0434 <a href="#">[사업자정보확인]</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
@@ -1172,13 +1179,13 @@
                 <div class="col-12 col-md-4">
                     <div class="text text-white-50 py-2 py-md-5">
                         <p class="text-white font-weight-bold mb-5">
-                            <img src="img/asset42.png" alt="">
-                            <img src="img/asset43.png" alt="">
-                            <img src="img/asset44.png" alt="">
+                            <a href="#"><img src="img/asset42.png" alt=""></a>
+                            <a href="#"><img src="img/asset43.png" alt=""></a>
+                            <a href="#"><img src="img/asset44.png" alt=""></a>
                         </p>
 
                         <p class="text-white font-weight-bold">DELIVERY INFO</p>
-                        <p>배송조회 : 로젠택배 (배송조회)</p>
+                        <p>배송조회 : 로젠택배 <a href="#">(배송조회)</a></p>
                         <p>반송주소 : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동) 14 우림라이온스밸리 2차 A동 910호</p>
                     </div>
                 </div>
@@ -1191,9 +1198,9 @@
             <div class="row justify-content-between py-3">
                 <div class="col-6 col-md-4">
                     <nav>
-                        <a href="#" class="text-white-50">이용약관</a>
-                        <a href="#" class="text-white-50">개인정보취급방침</a>
-                        <a href="#" class="text-white-50">이용안내</a>
+                        <a href="#" class="text-white-50 mr-1">이용약관</a>
+                        <a href="#" class="text-white-50 mr-1">개인정보취급방침</a>
+                        <a href="#" class="text-white-50 mr-1">이용안내</a>
                     </nav>
                 </div>
                 <div class="col-6 col-md-4 text-white-50 text-right">
@@ -1205,15 +1212,32 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+            var carouselHeight = $('#carouselExampleCaptions').height();
+            //console.log(carouselHeight);
+
+            $(window).scroll(() => {
+                if ($(this).scrollTop() > carouselHeight + 50) {
+                    $('#ScrolltoTop').css('opacity', '1');
+                } else {
+                    $('#ScrolltoTop').css('opacity', '0');
+                }
+            });
+
+            $('#ScrolltoTop').click(() => {
+                $('html,body').animate({ scrollTop: 0 }, 500);
+            });
+        })
+    </script>
 </body>
 
 </html>
