--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="Toyota/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
             </li>
             <li class="list-group-item">
-                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網remake(有RWD)</a>
+                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網復刻切版(有RWD)</a>
             </li>
             <li class="list-group-item">
                 <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
