update css html
update css html

--- a/TAKEN/index.html
+++ b/TAKEN/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,700i,800,800i" rel="stylesheet">
-    <link rel="stylesheet" href="scss/style.css?07172009">
+    <link rel="stylesheet" href="scss/style.css?07172021">
     <title>TAKEN 타켄</title>
     <style>
 
@@ -242,7 +242,7 @@
                                 <img src="img/asset10.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 AZ120 핸들 핑크/TAKEN AZ120 HANDLE PINK 120mm</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">98,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 4,900원(5%)</p>
@@ -257,7 +257,7 @@
                                 <img src="img/asset11.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 AZ120 핸들 티타늄/TAKEN AZ120 HANDLE TITANIUM 120mm</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">98,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 4,900원(5%)</p>
@@ -272,7 +272,7 @@
                                 <img src="img/asset12.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 A2 노브 레드/TAKEN A2 KNOB RED</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">28,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 1,400원(5%)</p>
@@ -287,7 +287,7 @@
                                 <img src="img/asset13.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 A2 노브 골드/TAKEN A2 KNOB GOLD</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">28,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 1,400원(5%)</p>
@@ -302,7 +302,7 @@
                                 <img src="img/asset14.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 A2 듀얼코어 핸들 티타늄/TAKEN A2 DUAL CORE HANDLE TITANIUM 85,90mm</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">175,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 8,700원(5%)</p>
@@ -317,7 +317,7 @@
                                 <img src="img/asset15.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 A2 듀얼코어 핸들 골드/TAKEN A2 DUAL CORE HANDLE GOLD 85,90mm</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">175,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 8,700원(5%)</p>
@@ -332,7 +332,7 @@
                                 <img src="img/asset16.jpeg" class="w-100">
                             </div>
                             <div class="description position-absolute text-center">
-                                <h6>pdName</h6>
+                                <h6>타켄 A2 듀얼코어 핸들 레드/TAKEN A2 DUAL CORE HANDLE RED 85,90mm</h6>
                                 <p>TOKEN</p>
                                 <p class="text-danger">175,000원</p>
                                 <p><img src="img/icon_201710242140149100.png" class="mb-1" alt=""> 8,700원(5%)</p>
