--- a/TAKEN/index.html
+++ b/TAKEN/index.html
@@ -1157,7 +1157,7 @@
                         <p class="text-white font-weight-bold mb-2">TAKEN</p>
                         <p>COMPANY : TAKEN (타켄)</p>
                         <p>CEO : 이서진</p>
-                        <p>E-MAIL : <a href="#"">turbotek01@gmail.com</a></p>
+                        <p>E-MAIL : <a href="#">turbotek01@gmail.com</a></p>
                         <p>ADDRESS : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동)</p>
                         <p>14 우림라이온스밸리 2차 A동 910호</p>
                         <p>BUSINESS LICENSE : 1054514474</p>
@@ -1184,7 +1184,7 @@
                             <a href="#"><img src="img/asset44.png" alt=""></a>
                         </p>
 
-                        <p class="text-white font-weight-bold">DELIVERY INFO</p>
+                        <p class="text-white font-weight-bold mb-2">DELIVERY INFO</p>
                         <p>배송조회 : 로젠택배 <a href="#">(배송조회)</a></p>
                         <p>반송주소 : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동) 14 우림라이온스밸리 2차 A동 910호</p>
                     </div>
